objects/Purchase_Item__c/Purchase_Item__c.object-meta.xml
<CustomObject>
    <label>Purchase Item</label>
    <nameField>
        <label>Purchase Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>