objects/Purchase_Item__c/fields/Purchase_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Item__c</fullName>
    <label>Purchase Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Fixed Assets</fullName>
            </value>
            <value>
                <fullName>IT Expenses</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Office Expense</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Non Capital Purchases</fullName>
            </value>
            <value>
                <fullName>Facilities Costs</fullName>
            </value>
            <value>
                <fullName>Service Fees</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>