objects/Purchase_Item__c/fields/Purchase_Item_Desc__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Item_Desc__c</fullName>
    <label>Purchase Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>