objects/Purchase_Item__c/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ROI</label>
    <type>Checkbox</type>
</CustomField>