objects/Purchase_Item__c/fields/Security_Review__c.field-meta.xml
<CustomField>
    <fullName>Security_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EXT. Security Review</label>
    <type>Checkbox</type>
</CustomField>