objects/Purchase_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Item_Desc__c</columns>
    <columns>Purchase_Item__c</columns>
    <columns>Security_Review__c</columns>
    <columns>MSA_OR_PO_T_C_s__c</columns>
    <columns>Order_Form__c</columns>
    <columns>ROI__c</columns>
    <columns>SOW__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>